--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -36,9 +36,7 @@
 </header>
 
 <!-- Banner -->
-<img src="img/lesende.jpg" alt="Strati" style="width:100%">
-	<div class="w3-display-bottomleft w3-padding-medium w3-opacity w3-white"> La Liseuse...à la SCAM, Paris. Photo: Joa Mauduech
-  </div>
+	<div class="w3-display-container"> <img src="img/lesende.jpg" alt="Strati" style="width:100%"> <div class="w3-display-bottomleft w3-padding-medium w3-opacity w3-white"> La Liseuse... à la SCAM, Paris. Photo: Joa Mauduech </div> </div>
 <img src="img/logo.png" alt="logo" style="width:10%; opacity:0.3; position:fixed; right:0; top:100px" class="w3-hover-opacity">
 <!-- Start -->
   
@@ -52,7 +50,7 @@
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <h3 class="w3-left-align">Portrait</h3>
     <p class="w3-justify"> <i>Warum sind Gebäude aus der Nachkriegszeit und später so unbeliebt?</i> Diese Frage hat mich während des Architekturstudiums nicht losgelassen, so dass ich mich entschied im Rahmen einer Promotion eine Antwort dafür zu finden. 
-	<p class="w3-justify"> Aufgewachsen in München in einer deutsch-griechischen Familie habe ich mich nach dem Abitur entschlossen Architektur zu studieren, das Fach zwischen Technik und Kunst. Nachdem ich ein paar Jahre in der Forschung und Lehre an renommierten Universitäten in der Schweiz tätig war, wagte ich 2024 den Schritt in die Selbstständigkeit.
+	<p class="w3-justify"> Aufgewachsen in München in einer deutsch-griechischen Familie habe ich mich nach dem Abitur entschlossen Architektur zu studieren, das Fach zwischen Technik und Kunst. Nachdem ich ein paar Jahre in der Forschung und Lehre an renommierten Universitäten in der Schweiz tätig war, widme ich mich seit 2024 selbstständigen Projekten.
 		
 	<p class="w3-justify">Ich lebe und arbeite in Zürich und München.</p>
 	</div>
@@ -63,11 +61,11 @@
 
 	<p class="w3-justify">2025-2026</p>
 	<p class="w3-justify"><b>ETH Zürich, Schweiz</b>: Projektleitung Works Webseite - digitale Ausstellung für Masterarbeiten</p>
-	<p style="color:cadetblue">Neugestaltung der Works Webseite zusammen mit Bänziger Hug Design. Schaut mal vorbei <a href="https://works.arch.ethz.ch/">auf Works</a></p>
+	<p class="w3-justify" style="color:cadetblue">Neugestaltung der Works Webseite zusammen mit Bänziger Hug Design. Schaut mal vorbei <a href="https://works.arch.ethz.ch/">auf Works</a></p>
 
 	<p class="w3-justify">2024-2025</p>
 	<p class="w3-justify"><b>Werk, bauen + wohnen, Schweiz</b>: Redaktion des Schweizer Architektur Jahrbuchs 2025/26</p>
-	<p style="color:cadetblue">Die zweite Ausgabe des SAY auf die Beine Stellen gemeinsam mit Fabian Ruppanner und Roland Züger.</p>
+	<p class="w3-justify" style="color:cadetblue">Die zweite Ausgabe des SAY auf die Beine Stellen gemeinsam mit Fabian Ruppanner und Roland Züger.</p>
 		
 	<p class="w3-justify">2023-2024</p>
 	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Co-Leitung eines Buchprojektes und wissenschaftliche Mitarbeiterin</p>
@@ -75,11 +73,11 @@
 	
 	<p class="w3-justify">2019-2023</p>
 	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: Wissenschaftliche Mitarbeiterin</p>
-	 <p style="color:cadetblue">Projektmanagerin für das EU-geförderte H2020 Projekt TACK am Lehrstuhl für Geschichte und Theorie des Städtebaus, Prof. Tom Avermaete.</p>
+	<p class="w3-justify" style="color:cadetblue">Projektmanagerin für das EU-geförderte H2020 Projekt TACK am Lehrstuhl für Geschichte und Theorie des Städtebaus, Prof. Tom Avermaete.</p>
 	
 	<p class="w3-justify">2022-2023</p>
 	<p class="w3-justify"><b>Zentralinstitut für Kunstgeschichte in München, Deutschland</b>: Fellowship des <a href="https://www.zikg.eu/personen/kweber">Theodor-Fischer-Preises 2022</a></p>
-	<p style="color:cadetblue">Forschungsprojekt «Die Gr.-Orth. Allerheiligenkirche in München» erschienen als Hardcover beim Kunstverlag Josef Fink
+	<p class="w3-justify" style="color:cadetblue">Forschungsprojekt «Die Gr.-Orth. Allerheiligenkirche in München» erschienen als Hardcover beim Kunstverlag Josef Fink
 im Oktober 2023, Druckkosten gefördert durch die Geschwister Boehringer Ingelheim Stiftung für Geisteswissenschaften</p>
 
 	<p class="w3-justify">2019-2022</p>
@@ -157,6 +155,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
