--- a/b_million.html
+++ b/b_million.html
@@ -115,7 +115,7 @@
 	</header>
 
 <!-- Banner -->
-	<img src="img/candilis.jpg" alt="Strati" style="width:100%">
+	<div class="w3-display-container"> <img src="img/candilis.jpg" alt="ivry" style="width:100%"> <div class="w3-display-bottomright w3-padding-medium w3-opacity w3-white"> Photo: Jonathan Sassi </div> </div>
 
 <!-- Page content -->
 <div class="w3-container w3-content w3-padding-24" style="max-width:800px" id="start">
@@ -261,6 +261,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
