--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -63,6 +63,8 @@
 	<p class="w3-justify"><b>ETH Zürich, Schweiz</b>: Projektleitung Works Webseite - digitale Ausstellung für Masterarbeiten</p>
 	<p class="w3-justify" style="color:cadetblue">Neugestaltung der Works Webseite zusammen mit Bänziger Hug Design. Schaut mal vorbei <a href="https://works.arch.ethz.ch/">auf Works</a></p>
 
+	<iframe src="https://works.arch.ethz.ch" style="width:70%; height:80vh; border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		
 	<p class="w3-justify">2024-2025</p>
 	<p class="w3-justify"><b>Werk, bauen + wohnen, Schweiz</b>: Redaktion des Schweizer Architektur Jahrbuchs 2025/26</p>
 	<p class="w3-justify" style="color:cadetblue">Die zweite Ausgabe des SAY auf die Beine Stellen gemeinsam mit Fabian Ruppanner und Roland Züger.</p>
@@ -155,6 +157,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
