--- a/angebote.html
+++ b/angebote.html
@@ -94,6 +94,8 @@
 	<p class="w3-justify">27. Oktober 2025</p>
 	<p class="w3-justify"><b>SCAM, Paris</b></p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+
 		
 	<p class="w3-justify">30. November 2024</p>
 	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
@@ -274,6 +276,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
