--- a/angebote.html
+++ b/angebote.html
@@ -93,12 +93,14 @@
 
 	<p class="w3-justify">27. Oktober 2025</p>
 	<p class="w3-justify"><b>SCAM, Paris</b></p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-<iframe src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+	<iframe src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 
-		
 	<p class="w3-justify">30. November 2024</p>
 	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
+		
+	<p class="w3-justify">07. November 2024</p>
+	<p class="w3-justify"><b>Buchvorstellung "Mein NEUES altes Haus" mit Meruert Zharekesheva, moderiert von André Patrao</b></p>
+	<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=rA82g-SXijVyj13W" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 	
 	<p class="w3-justify">14. April 2024</p>
 	<p class="w3-justify"><b>Evangelische Nikodemuskirche München</b>: "Marienlieder und die griechisch-orthodoxe Nachbargemeinde Allerheiligen"</p>
@@ -276,6 +278,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
