--- a/angebote.html
+++ b/angebote.html
@@ -100,7 +100,7 @@
 		
 	<p class="w3-justify">07. November 2024</p>
 	<p class="w3-justify"><b>Buchvorstellung "Mein NEUES altes Haus" mit Meruert Zharekesheva, moderiert von André Patrao</b></p>
-	<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=rA82g-SXijVyj13W" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
+	<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=Ib9C_RPV70emtqGC" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 	
 	<p class="w3-justify">14. April 2024</p>
 	<p class="w3-justify"><b>Evangelische Nikodemuskirche München</b>: "Marienlieder und die griechisch-orthodoxe Nachbargemeinde Allerheiligen"</p>
@@ -278,6 +278,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
