--- a/angebote.html
+++ b/angebote.html
@@ -92,14 +92,14 @@
     <h3 class="w3-left-align">Bisherige Vorträge (Auswahl)</h3>
 
 	<p class="w3-justify">27. Oktober 2025</p>
-	<p class="w3-justify"><b>SCAM, Paris</b></p>
+	<p class="w3-justify"><b>"Vestiges et Vivants - un film, un livre" avec Philippe Troyon à la SCAM, Paris</b></p>
 	<iframe src="https://www.youtube.com/embed/cYOCQYRQUJE?si=duXtDzWwlkN8Wgvm" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 
 	<p class="w3-justify">30. November 2024</p>
 	<p class="w3-justify"><b>Katholische Allerheiligenkirche München</b></p>
 		
 	<p class="w3-justify">07. November 2024</p>
-	<p class="w3-justify"><b>Buchvorstellung "Mein NEUES altes Haus" mit Meruert Zharekesheva, moderiert von André Patrao</b></p>
+	<p class="w3-justify"><b>Online-Buchvorstellung "Mein NEUES altes Haus" mit Meruert Zharekesheva, moderiert von André Patrão</b></p>
 	<iframe src="https://www.youtube.com/embed/C4MB4AtRIE4?si=Ib9C_RPV70emtqGC" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 	
 	<p class="w3-justify">14. April 2024</p>
@@ -278,6 +278,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
