--- a/angebote.html
+++ b/angebote.html
@@ -111,7 +111,7 @@
 
 	<p class="w3-justify">27. November 2023</p>
 	<p class="w3-justify"><b>Gr.-Orth. Allerheiligenkirche München</b>: "Die Gr.-Orth. Allerheiligenkirche in München. Ein Baupojekt der Ökumene als kulturelle und geistige Brücke zwischen Ost und West" Offizielle Buchvorstellung mit 100 Gästen.</p>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/omDt9zQKYRY?si=NHQx9BkNQczDzJyb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/embed/omDt9zQKYRY?si=NHQx9BkNQczDzJyb" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 		
 	<p class="w3-justify">24. November 2023</p>
 	<p class="w3-justify"><b>Eidgenössische Technische Hochschule Zürich, Schweiz</b>: "How did a research become a book within a year?" vor 15 Personen.</p>
@@ -124,8 +124,7 @@
 
 	<p class="w3-justify">07. Juli 2019</p>
 	<p class="w3-justify"><b>Ecole Polytechnique Fédérale de Lausanne, Schweiz</b>: Verteidigung der Doktorarbeit "Les «vestiges» de l’opération Million dans l’oeuvre de Georges Candilis - Actualités et Strategies de sauvegarde pour un patrimoine du second après-guerre)" vor 40 Personen.</p>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/AkX5DiVqX1U?si=BgFQaFSNpjwnNB6D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe src="https://www.youtube.com/embed/AkX5DiVqX1U?si=BgFQaFSNpjwnNB6D" title="YouTube video player" style="width:100%; aspect-ratio:16/9; border:0;" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
 		
 	<p class="w3-justify">März 2016</p>
 	<p class="w3-justify"><b>United Nations New York Conference "Cities of the Future", USA</b>: Präsentation des Projektes "InterAging Home"</p>
@@ -140,8 +139,6 @@
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="start">
     <img src="img/UN.jpg" alt="UN" style="width:50%">
-	<p class="w3-justify"> <i>Und das Lampenfieber?</i></p>
-	<p class="w3-justify">Als Kind war ich immer nervös vor anderen Menschen auf der Bühne zu stehen - beispielsweise bei Klaviervorspielen oder Tanzprüfungen...Ein Wendepunkt vor vielen Menschen sprechen zu müssen kam 2014: Als Preisträgerin des International Council for Caring Communities (ICCC) Student Design Wettbewerbes 2014 (Team 3. Preis) stellte ich Projekte zum Thema soziale Integration bei der UN in New York und Beijing vor. Die Vorträge im Zusammenhang damit haben mir die Angst genommen, vor großem Publikum zu sprechen. An der ETH Zürich stand ich regelmässig vor 100 Studierenden am Redepult. Entspannt auf der Bühne zu stehen ist eine Sache der Übung und Routine...</p>
 	
 </div>
 
@@ -278,6 +275,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
