--- a/buecher.html
+++ b/buecher.html
@@ -57,9 +57,8 @@
 </div>
 
 <!-- Top menu on small screens -->
-<header class="w3-container w3-top w3-hide-large w3-hide-medium w3-blue-gray w3-large w3-padding-medium">
-  <a href="index.html" class="w3-button w3-blue-gray w3-margin-right">Start</a> <a href="index.html#kontakt" class="w3-button w3-blue-gray w3-margin-right">Kontakt</a>
-</header>
+<header class="w3-top w3-hide-large w3-hide-medium w3-blue-gray" style="z-index:1000;"> <details class="mobile-nav"> <summary class="mobile-summary"> <span aria-hidden="true">☰</span> </summary> <nav class="w3-bar-block w3-blue-gray w3-card" role="navigation" aria-label="Mobile Navigation"> <a href="#" class="w3-bar-item w3-button">Start</a> <a href="buecher.html" class="w3-bar-item w3-button">Bücher</a> <a href="angebote.html" class="w3-bar-item w3-button">Angebote</a> <a href="lebenslauf.html" class="w3-bar-item w3-button">Portrait</a> <a href="#Kontakt" class="w3-bar-item w3-button">Kontakt</a> </nav> </details> </header>
+
 
 <!-- Image -->
 <img src="img/bannerbuecher2.jpg" alt="banner" style="width:100%">
@@ -282,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
