--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <div class="w3-top w3-theme-l1 w3-wide w3-padding w3-card" style="width:100%">
   <div class="w3-bar w3-blue-gray w3-card w3-large w3-center w3-hide-small" style="width:100%">
   	<a href="#" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Start</a> 
-	<a href="buecher.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Bücher</a> 
+	<a href="buecher.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Projekte</a> 
 	<a href="angebote.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Angebote</a>
 	<a href="lebenslauf.html" class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-small">Portrait</a>
 	<a href="#Kontakt" class="w3-bar-item w3-button w3-padding-medium w3-hide-small">Kontakt</a>
@@ -31,7 +31,7 @@
 </div>
 
 <!-- Top menu on small screens -->
-<header class="w3-top w3-hide-large w3-hide-medium w3-blue-gray" style="z-index:1000;"> <details class="mobile-nav"> <summary class="mobile-summary"> <span aria-hidden="true">☰</span> </summary> <nav class="w3-bar-block w3-blue-gray w3-card" role="navigation" aria-label="Mobile Navigation"> <a href="#" class="w3-bar-item w3-button">Start</a> <a href="buecher.html" class="w3-bar-item w3-button">Bücher</a> <a href="angebote.html" class="w3-bar-item w3-button">Angebote</a> <a href="lebenslauf.html" class="w3-bar-item w3-button">Portrait</a> <a href="#Kontakt" class="w3-bar-item w3-button">Kontakt</a> </nav> </details> </header>
+<header class="w3-top w3-hide-large w3-hide-medium w3-blue-gray" style="z-index:1000;"> <details class="mobile-nav"> <summary class="mobile-summary"> <span aria-hidden="true">☰</span> </summary> <nav class="w3-bar-block w3-blue-gray w3-card" role="navigation" aria-label="Mobile Navigation"> <a href="#" class="w3-bar-item w3-button">Start</a> <a href="buecher.html" class="w3-bar-item w3-button">Projekte</a> <a href="angebote.html" class="w3-bar-item w3-button">Angebote</a> <a href="lebenslauf.html" class="w3-bar-item w3-button">Portrait</a> <a href="#Kontakt" class="w3-bar-item w3-button">Kontakt</a> </nav> </details> </header>
 
 
 
@@ -132,7 +132,7 @@
 	</div>
 	
 		<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="./buecher.html"><button class="w3-button w3-khaki">Mehr über Veröffentlichungen</button></a>
+	<a href="./buecher.html"><button class="w3-button w3-khaki">Mehr über Projekte</button></a>
 	</div>
 	</div>
 </div>
@@ -218,6 +218,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
