--- a/buecher.html
+++ b/buecher.html
@@ -75,9 +75,9 @@
 
 <!-- Bücher und Artikel -->
 <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
-    <h3 class="w3-left-align">Bücher als Autorin und Herausgeberin</h3>
+    <h3 class="w3-left-align">Autorin und Herausgeberin</h3>
 		
-	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur mache ich gerne der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich.</p>
+	<p class="w3-justify">Spannende Erkenntnisse und Geschichten über Architektur mache ich gerne der Öffentlichkeit langfristig in Form von Artikeln oder Bücher zugänglich. Jedes Buchprojekt beinhaltet eine begleitende Vermittlungsarbeit in Form von einer oder mehreren Veranstaltungen.</p>
 	
 <!-- Panels -->	
 	<div class="w3-row-padding">
@@ -281,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
