--- a/buecher.html
+++ b/buecher.html
@@ -226,7 +226,7 @@
 	<p class="w3-justify">Korinna Zinovia Weber, «Georges Candilis - Architect, Urban Planer and Author with communist ideas in a capitalist world», in: Ljiljana Kolešnik, Tamara Bjažić Klarin (eds.), French Culture and Central East European Modern Art, Zagreb 2015</p>
 	
 <br>
-	<p class="w3-center"><b>Haben Sie Interesse Ihr eigenes Buchprojekt zu verwirklichen? Gerne begleite ich Sie dabei!</b></p>
+	<p class="w3-center"><b>Haben Sie Interesse Ihr eigenes Projekt zu verwirklichen? Gerne begleite ich Sie dabei!</b></p>
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="angebote.html#publikation"><button class="w3-button w3-blue-grey">Publikationsberatung</button></a>
@@ -281,6 +281,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
