--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -154,18 +154,19 @@
   </div>
 
 <!-- Mehr zum Buch -->	
- <h3 class="w3-opacity w3-left-align">Mehr zum Buch</h3>
+ <h3 class="w3-opacity w3-left-align">Wie kam es zum Kinderbuch?</h3>
 	
 	<p class="w3-justify">Irgendwo in der Schweiz stand ein vierstöckiges Wohnhaus mit Mansardendach, das 1938 erbaut wurde – eine für seine Zeit typische lokale Architektur. Im Jahr 2023 wurde bekannt gegeben, dass es abgerissen und durch ein neues Gebäude ersetzt werden sollte mit ausschließlich winzige Zimmer (9 m²) für Studierende. 
-    Die Entscheidung des Eigentümers überraschte die Bewohnerinnen und Bewohner. Einige der Familien waren gerade erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
-    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung die Einheimischen aus ihren Vierteln verdrängt. Dies inspirierte mich ein Kinderbuch zu diesem Thema zu schreiben:
+    Die Entscheidung des Eigentümers überraschte die Bewohnerinnen und Bewohner. Einige waren vor kurzem erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
+    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung die Einheimischen aus ihren Vierteln verdrängt.
  </p>
-
-  <p class="w3-justify"><i>"Ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss. Plötzlich wurde mir klar, dass wir mit unseren Kindern nicht genug über 
-    unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben."</i>
+  <p class="w3-justify">Als ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss wurde mir plötzlich klar, dass wir mit unseren Kindern nicht genug über 
+    unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
  <br><br>
+	 <h3 class="w3-opacity w3-left-align">Förderverwerk</h3>
+	  <p class="w3-justify"> Das Projekt wurde vom Netzwerk Frau und SIA finanziell unterstützt.</p>
 
 <!-- Über die Autorinnen -->	
   <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
@@ -259,6 +260,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
