--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -154,7 +154,7 @@
   </div>
 
 <!-- Mehr zum Buch -->	
- <h3 class="w3-opacity w3-left-align">Wie kam es zum Kinderbuch?</h3>
+ <h3 class="w3-opacity w3-left-align">Warum ein Kinderbuch?</h3>
 	
 	<p class="w3-justify">Irgendwo in der Schweiz stand ein vierstöckiges Wohnhaus mit Mansardendach, das 1938 erbaut wurde – eine für seine Zeit typische lokale Architektur. Im Jahr 2023 wurde bekannt gegeben, dass es abgerissen und durch ein neues Gebäude ersetzt werden sollte mit ausschließlich winzige Zimmer (9 m²) für Studierende. 
     Die Entscheidung des Eigentümers überraschte die Bewohnerinnen und Bewohner. Einige waren vor kurzem erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
@@ -165,11 +165,15 @@
   </p>
 
  <br><br>
-	 <h3 class="w3-opacity w3-left-align">Förderverwerk</h3>
+	 
+	 <h3 class="w3-opacity w3-left-align">Lesungen für Kinder</h3>
+	<!-- Fördervermerk -->	 
+	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
 	  <p class="w3-justify"> Das Projekt wurde vom Netzwerk Frau und SIA finanziell unterstützt.</p>
+	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
 
 <!-- Über die Autorinnen -->	
-  <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
+  <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:80%">
 
  <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
 	
@@ -260,6 +264,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
