--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -199,7 +199,7 @@
 <p class="w3-center"><b>Darf das blaue Filzhaus mal zu Besuch kommen? Wo soll als nächstes Vorgelesen werden?</b></p>
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="angebote.html#publikation"><button class="w3-button w3-blue-gray">Publikationsberatung</button></a>
+	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-blue-gray">Kinderlesungen</button></a>
 	</div>
   
  </div>
@@ -264,6 +264,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
