--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -135,8 +135,6 @@
 	<p class="w3-justify">Mit Texten und Typografie von Korinna Zinovia Weber und handgemalten Illustrationen von Meruert Zharekesheva.
 </p><br>
 
-	 
-
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
@@ -165,17 +163,14 @@
   </p>
 
  <br><br>
-	 
-	 <h3 class="w3-opacity w3-left-align">Lesungen für Kinder</h3>
 	<!-- Fördervermerk -->	 
 	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
-	  <p class="w3-justify"> Das Projekt wurde vom Netzwerk Frau und SIA finanziell unterstützt.</p>
+	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
 	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
 
 <!-- Über die Autorinnen -->	
-  <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:80%">
-
- <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
+   <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
+	 <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:80%">
 	
 	<p class="w3-justify"><b>Dr. Korinna Zinovia WEBER</b> hat dieses Buch geschrieben und die Schriftart LANGENRAIN entworfen, inspiriert von ihrem Nachbarhaus in der Schweiz. Sie studierte Architektur in München und Paris, promovierte später in Lausanne und interessiert sich seitdem unter anderem für die Geschichte von Häusern und deren mögliche Zukunft. Wenn sie gerade keine Bücher schreibt, erkundet sie gemeinsam mit ihren Kindern die Welt oder tanzt Ballett.
  </p>
@@ -264,6 +259,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
