--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -162,6 +162,16 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
+<!-- Kinderbuch Lesung -->	
+<h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
+	<p class="w3-center">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Hut gezogen werden. Und etwas kleines zur Erinnerung gibt es auch.</p>
+	 <p class="w3-center"><b>Darf das blaue Filzhaus mal zu Besuch kommen? Wo soll als nächstes Vorgelesen werden?</b></p>
+
+	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
+	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-khaki">Kinderlesungen</button></a>
+	</div>
+
+	 
  <br><br>
 	<!-- Fördervermerk -->	 
 	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
@@ -190,12 +200,7 @@
 
  <img src="img/langensteinen.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
 
-<!-- Publikationsberatung -->	
-<p class="w3-center"><b>Darf das blaue Filzhaus mal zu Besuch kommen? Wo soll als nächstes Vorgelesen werden?</b></p>
 
-	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-blue-gray">Kinderlesungen</button></a>
-	</div>
   
  </div>
  </div>
@@ -259,6 +264,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
