--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -164,15 +164,13 @@
 
 <!-- Kinderbuch Lesung -->	
 <h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
-	<p class="w3-center">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Hut gezogen werden. Und etwas kleines zur Erinnerung gibt es auch.</p>
+	<p class="w3-justify">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Hut gezogen werden. Und etwas kleines zur Erinnerung gibt es auch.</p>
 	 <p class="w3-center"><b>Darf das blaue Filzhaus mal zu Besuch kommen? Wo soll als nächstes Vorgelesen werden?</b></p>
 
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
 	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-khaki">Kinderlesungen</button></a>
 	</div>
 
-	 
- <br><br>
 	<!-- Fördervermerk -->	 
 	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
 	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
@@ -264,6 +262,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
