--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -176,6 +176,10 @@
 	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
 	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
 
+	<!-- Rezensionen -->	 
+	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
+<p class="w3-justify"> Das Projekt wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann rezensiert. </p>
+	 
 <!-- Über die Autorinnen -->	
    <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
 	 <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:80%">
@@ -262,6 +266,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
