--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -178,7 +178,7 @@
 
 	<!-- Rezensionen -->	 
 	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
-<p class="w3-justify"> Das Projekt wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann rezensiert. </p>
+<p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
 	 
 <!-- Über die Autorinnen -->	
    <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
@@ -266,6 +266,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
