--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -133,7 +133,9 @@
 	<p class="w3-justify">Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen näher gebracht.
 </p>
 	<p class="w3-justify">Mit Texten und Typografie von Korinna Zinovia Weber und handgemalten Illustrationen von Meruert Zharekesheva.
-</p><br>
+</p>
+	  <p class="w3-center"><b>Das Kinderbuch ist in sieben Sprachen als print-on-demand erhältlich! Melden Sie sich bei mir per Email, um die Wartezeit zu verkürzen, denn ich habe immer ein paar wenige auf Vorrat gedruckt.</b></p>
+	 <br>
 
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
@@ -269,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
