--- a/angebote.html
+++ b/angebote.html
@@ -148,9 +148,8 @@
 
 </div>
     <h3 class="w3-left-align">Lesungen für Kinder</h3>
-	<p class="w3-justify">2024 habe ich ein Kinderbuch über Umbau statt Neubau geschrieben, das von Meruert Zharekesheva von Hand illustriert wurde. Das Buch “Mein NEUES altes Haus” erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief.</p>
-    <p class="w3-justify">Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen nähergebracht. Daraus habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
-    <p class="w3-justify">Die Veranstaltung wurde schon in der Schule Freilager, in zwei Kindergärten in Zürich und München, in einer Kita der Stiftung Kihz, dem Architekturzentrum Zürich, dem ZAZ Bellerive und im GZ Bäckeranlage gegeben. Das Feedback des jungen Publikums war überwältigend positiv begeistert.</p>
+	<p class="w3-justify">Aus meinem Kinderbuch "Mein NEUES altes Haus" habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
+    <p class="w3-justify">Die Veranstaltung wurde schon in der Schule Freilager, in zwei Kindergärten in Zürich und München, in einer Kita der Stiftung Kihz, dem Architekturzentrum Zürich, dem ZAZ Bellerive und im GZ Bäckeranlage gegeben. Das Feedback des jungen Publikums war überwältigend positiv begeistert. Dauer: 45-60min.</p>
     <p class="w3-justify">Darf ich einmal für Sie/Ihre Klasse/Ihre Gruppe/Ihr Fest lesen kommen?
 	Kontaktieren Sie mich gerne!</p>
 </div>
@@ -271,6 +270,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
