--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -180,7 +180,7 @@
 	<!-- Rezensionen -->	 
 	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
 <p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
-<p class="w3-justify"> Roland Züger hat es in werk, baunen + wohnen 2025-10 empfohlen.</p>
+<p class="w3-justify"> Roland Züger hat es in <a href="https://www.wbw.ch/de/heft/archiv/122025-auf-zeit.html" target="_blank" rel="noopener">werk, bauen + wohnen 2025-12</a> empfohlen.</p>
 	 
 <!-- Über die Autorinnen -->	
    <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
@@ -271,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
