--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -200,7 +200,7 @@
   </a>
 
 <!-- Details -->	
-   <h3 class="w3-opacity w3-left-align">Schriftart</h3>
+   <h3 class="w3-opacity w3-left-align">Mit liebe zu Details...</h3>
  <p class="w3-justify">Für mein Kinderbuch war ich auf der Suche nach einer Schrift, die den Charakter des Gebäudes von 1938 widerspiegelt und zugleich individuell sowie lizenzfrei ist, um ins kleine Budget zu passen. Bei der Recherche zu dem besagten Nachbarhaus stieß ich auf eine historische Aufnahme von 1940, auf der neben dem Eingang ein Relief mit dem Hausnamen "Langenrain" zu sehen ist, das heute nicht mehr existiert. Inspiriert von diesem Relief schrieb ich das Alphabet von Hand, scannte es und digitalisierte es mit einer Software – so entstand die Schrift „Langenrain“ für das Kinderbuch.</p>
 	<br>  
   <br>  
@@ -271,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
