--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -202,7 +202,9 @@
 <!-- Details -->	
    <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
  <p class="w3-justify">Für mein Kinderbuch war ich auf der Suche nach einer Schrift, die den Charakter des Gebäudes von 1938 widerspiegelt und zugleich individuell sowie lizenzfrei ist, um ins kleine Budget zu passen. Bei der Recherche zu dem besagten Nachbarhaus stieß ich auf eine historische Aufnahme von 1940, auf der neben dem Eingang ein Relief mit dem Hausnamen "Langenrain" zu sehen ist, das heute nicht mehr existiert. Inspiriert von diesem Relief schrieb ich das Alphabet von Hand, scannte es und digitalisierte es mit einer Software – so entstand die Schrift „Langenrain“ für das Kinderbuch.</p>
-	<br>  
+ <p class="w3-justify">Die Geschichte erforderte einen architektonischen Entwurf für die Aufstockung des sanierten Hauses. Auf Grundlage der Originalpläne des Vorbildhauses hat Meruert ein ein digitales 3D‑Modell erstellt, das den Gestaltungs‑ und Illustrationsprozess unterstützte. Konkretes Vorbild das von <a href="https://www.freisaarinen.ch/Projekte/pr_index.html" target="_blank" rel="noopener">Frei + Saarinen Architects</a> in Zürich entworfene Haus in der Agnesstrasse.
+	 </p>
+	 <br>  
   <br>  
 
  <img src="img/langensteinen.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
@@ -271,6 +273,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
