--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -122,7 +122,7 @@
 		<!-- Button jetzt Bestellen --> 
       	 <a class="w3-button w3-khaki w3-margin-top fixed-button" href="https://architechne.ch/meinneuesalteshaus.html" target="_blank">Jetzt Bestellen! (EU)</a>
 		<a class="w3-button w3-orange w3-margin-top fixed-button" href="https://www.ricardo.ch/de/a/kinderbuch-'mein-neues-altes-haus'-1310715014/" target="_blank">Bei Ricardo! (CH)</a>
-        <a class="w3-button w3-blue-gray w3-margin-top fixed-button" href="angebote.html#Kinderlesungen" target="_blank">Besuch vom Filzhaus!</a>
+        <a class="w3-button w3-blue w3-margin-top fixed-button" href="angebote.html#Kinderlesungen" target="_blank">Besuch vom Filzhaus!</a>
 	</div>
     </div>
  </div>
@@ -274,6 +274,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
