--- a/angebote.html
+++ b/angebote.html
@@ -149,7 +149,7 @@
 </div>
     <h3 class="w3-left-align">Lesungen für Kinder</h3>
 	<p class="w3-justify">Aus meinem Kinderbuch "Mein NEUES altes Haus" habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf.</p>
-    <p class="w3-justify">Die Veranstaltung wurde schon in der Schule Freilager, in zwei Kindergärten in Zürich und München, in einer Kita der Stiftung Kihz, dem Architekturzentrum Zürich, dem ZAZ Bellerive und im GZ Bäckeranlage gegeben. Das Feedback des jungen Publikums war überwältigend positiv begeistert. Dauer: 45-60min.</p>
+    <p class="w3-justify">Das blaue Filzhaus war schon hier zu Besuch: Schule Freilager Vorlesenacht (Zürich), Freilager Kindergarten (Zürich), Nikodemäuse Kindergarten (München), Tierspital Kita der Stiftung Kihz (Zürich), dem Architekturzentrum Zürich, dem ZAZ Bellerive (Zürich) und im GZ Bäckeranlage (Zürich), Runstner Hof (Gargazon, IT). Das Feedback des jungen Publikums war überwältigend positiv begeistert. Dauer: 45-60min.</p>
     <p class="w3-justify">Darf ich einmal für Sie/Ihre Klasse/Ihre Gruppe/Ihr Fest lesen kommen?
 	Kontaktieren Sie mich gerne!</p>
 </div>
@@ -270,6 +270,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
