--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
 </div>
 </div>
 </div>
+
+	<div class="w3-content" style="max-width:800px"> 
+		<div class="w3-row-padding"> <div class="w3-col s12 m6"> 
+			<img src="img/Steinhausen1.jpg" alt="steinhausen" class="w3-image w3-card"> </div> <div class="w3-col s12 m6"> <img src="img/Südtirol.jpg" alt="Runstner Hof" class="w3-image w3-card"> </div> </div> </div>
 	
 	
 <!-- Lesungen -->
@@ -218,6 +222,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
