--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 	<div class="w3-content" style="max-width:800px"> 
 		<div class="w3-row-padding"> <div class="w3-col s12 m6"> 
-			<img src="img/Steinhausen1.jpg" alt="steinhausen" class="w3-image w3-card"> </div> <div class="w3-col s12 m6"> <img src="img/Südtirol.jpg" alt="Runstner Hof" class="w3-image w3-card"> </div> </div> </div>
+			<img src="img/steinhausen1.jpg" alt="steinhausen" class="w3-image w3-card"> </div> <div class="w3-col s12 m6"> <img src="img/Südtirol.jpg" alt="Runstner Hof" class="w3-image w3-card"> </div> </div> </div>
 	
 	
 <!-- Lesungen -->
@@ -222,6 +222,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
