--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -164,6 +164,8 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
+<div class="w3-content" style="max-width:300px"> <img src="img/filzhaus2.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+	 
 <!-- Kinderbuch Lesung -->	
 <h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
 	<p class="w3-justify">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Hut gezogen werden. Und etwas kleines zur Erinnerung gibt es auch.</p>
@@ -274,6 +276,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
