--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -164,7 +164,7 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
-<div class="w3-content" style="max-width:300px"> <img src="img/filzhaus2.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+<div class="w3-content" style="max-width:300px"> <img src="img/filzhaus.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
 	 
 <!-- Kinderbuch Lesung -->	
 <h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
@@ -276,6 +276,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
