--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -164,7 +164,7 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
-<div class="w3-content" style="max-width:300px"> <img src="img/filzhaus2.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+<div class="w3-content" style="max-width:300px"> <img src="img/filzhaus.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
 	 
 <!-- Kinderbuch Lesung -->	
 <h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
@@ -180,6 +180,9 @@
 	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
 	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
 
+	 <div class="w3-content" style="max-width:300px"> <img src="img/filzhaus2.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+	 
+	 
 	<!-- Rezensionen -->	 
 	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
 <p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
@@ -276,6 +279,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
