--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -168,7 +168,8 @@
 	 
 <!-- Kinderbuch Lesung -->	
 <h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
-	<p class="w3-justify">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: das blaue (Filz)Haus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor (ab 4 Jahren, jünger willkommen) und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Hut gezogen werden. Und etwas kleines zur Erinnerung gibt es auch.</p>
+	<p class="w3-justify">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder (ab 4 Jahren, jünger willkommen) gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: 
+		das blaue Filzhaus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Haus gezogen werden. Und etwas Kleines zur Erinnerung gibt es auch...</p>
 	 
 	 <div class="w3-content" style="max-width:300px"> <img src="img/filzhaus2.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
 	 <p class="w3-center"><b>Darf das blaue Filzhaus mit seiner Geschichte zu Besuch kommen?</b></p>
@@ -281,6 +282,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
