--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
   <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="vort">
     <h3 class="w3-left-align">Vorträge, Lesungen und Beratungsangebote</h3>
 	<p class="w3-justify">Sie wollen mehr über die Geschichte eines Gebäudes erfahren oder das Gebäude (Kirche, Firmensitz, Wohnhaus...) einem breiteren Publikum vorstellen?</p>
+	  <p class="w3-justify">Das blaue Filzhaus soll seine Geschichte den Kindern erzählen?</p>
 	<p class="w3-justify">Sie wollen eine Publikation verfassen oder gestalten?</p>
 	<p class="w3-justify">Sie wissen nicht wohin mit alten Kisten voller Pläne, Schriftverkehr und Fotos eines Architekturbüros?</p>
 	    <p class="w3-justify">Haben Sie Interesse Ihre Veranstaltung mit einem unterhaltenden Vortrag über Architektur zu bereichern? Dann melden Sie sich gerne bei mir.</p>
@@ -222,6 +223,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
