--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	
 <!-- Mehr über Ihre Expertin -->
 	<div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="Baufor">
-	<a href="lebenslauf.html"><button class="w3-button w3-blue-grey">Mehr über Ihre Expertin</button></a>
+	<a href="lebenslauf.html"><button class="w3-button w3-blue-grey">Mehr im Portrait</button></a>
 	</div>
 
 </div>
@@ -223,6 +223,7 @@ function w3_close() {
 
 </body>
 </html>
+
 
 
 
