--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -140,10 +140,10 @@
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
-   <img class="mySlides" src="img/gemaltebilder.jpg" style="width:100%">
+   <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
    <img class="mySlides" src="img/ZeichnungLS.jpg" style="width:100%">
    <img class="mySlides" src="img/echteshaus.jpg" style="width:100%">
-   <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
+   <img class="mySlides" src="img/veloseite.jpg" style="width:100%">
 
     <div id="fotoHinweis" class="w3-display-bottomright w3-padding-medium w3-opacity w3-white">
       Foto: Sereina Fritsche
@@ -282,6 +282,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
