--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -141,7 +141,7 @@
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
    <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
-   <img class="mySlides" src="img/ZeichnungLS.jpg" style="width:100%">
+   <img class="mySlides" src="img/merukori.jpg" style="width:100%">
    <img class="mySlides" src="img/echteshaus.jpg" style="width:100%">
    <img class="mySlides" src="img/veloseite.jpg" style="width:100%">
 
@@ -185,28 +185,7 @@
 
 	 
 	 
-	 
-	<!-- Rezensionen -->	 
-	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
-<p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
-<p class="w3-justify"> Roland Züger hat es in <a href="https://www.wbw.ch/de/heft/archiv/122025-auf-zeit.html" target="_blank" rel="noopener">werk, bauen + wohnen 2025-12</a> empfohlen.</p>
-	 
-<!-- Über die Autorinnen -->	
-   <h3 class="w3-opacity w3-left-align">Über die Autorinnen</h3>
-	 <img src="img/merukori.jpg" alt="Korinna Weber" class="w3-center" style="width:80%">
-	
-	<p class="w3-justify"><b>Dr. Korinna Zinovia WEBER</b> hat dieses Buch geschrieben und die Schriftart LANGENRAIN entworfen, inspiriert von ihrem Nachbarhaus in der Schweiz. Sie studierte Architektur in München und Paris, promovierte später in Lausanne und interessiert sich seitdem unter anderem für die Geschichte von Häusern und deren mögliche Zukunft. Wenn sie gerade keine Bücher schreibt, erkundet sie gemeinsam mit ihren Kindern die Welt oder tanzt Ballett.
- </p>
-  <a href="https://linkedin.com/in/dr-korinna-zinovia-weber-05516996" class="w3-button w3-blue-gray w3-hover-dark-grey" style="padding:6px 10px;">
-  <i class="fab fa-linkedin"></i>
-  </a>
 
-
- <p class="w3-justify"><b>Meruert ZHAREKESHEVA</b> hat die Bilder in diesem Buch von Hand gezeichnet und mit Gouachefarben gemalt. Sie hat in München, Singapur und London Architektur studiert. In ihrem Alltag zeichnet sie Pläne für Häuser und besucht Baustellen. Fast genauso sehr wie das Studium der Architektur und Städte liebt sie das Malen und Tanzen von Hip-Hop oder Jazz. Als Kind wollte sie schon immer anderen Märchen erzählen und Figuren zum Leben erwecken.
- </p>
-  <a href="https://linkedin.com/in/meruert-zharekesheva-4a6620a9" class="w3-button w3-blue-gray w3-hover-dark-grey" style="padding:6px 10px;">
-  <i class="fab fa-linkedin"></i>
-  </a>
 
 <!-- Details -->	
    <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
@@ -218,6 +197,11 @@
 
  <img src="img/langensteinen.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
 
+	 
+	<!-- Rezensionen -->	 
+	 <h3 class="w3-opacity w3-left-align">Rezensionen</h3>
+<p class="w3-justify"> Über das Kinderbuch wurde auf <a href="https://www.moderne-regional.de/abriss-fuer-kinder/" target="_blank" rel="noopener">moderne Regional</a> von Karin Berkemann berichtet.</p>
+<p class="w3-justify"> Roland Züger hat es in <a href="https://www.wbw.ch/de/heft/archiv/122025-auf-zeit.html" target="_blank" rel="noopener">werk, bauen + wohnen 2025-12</a> empfohlen.</p>
 
   
  </div>
@@ -235,7 +219,8 @@
 	<p class="w3-center"><b>kori.z.weber[at]gmail.com</b></p>
 	
 	<p class="w3-center" id="kontakt">Oder über <a href="https://linkedin.com/in/dr-korinna-zinovia-weber-05516996">LinkedIn</a> </p>
-	
+	 <a href="https://linkedin.com/in/dr-korinna-zinovia-weber-05516996" class="w3-button w3-blue-gray w3-hover-dark-grey" style="padding:6px 10px;">
+  <i class="fab fa-linkedin"></i>
 	</div>
 	
 	
@@ -282,6 +267,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
