--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -163,6 +163,7 @@
   <p class="w3-justify">Als ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss wurde mir plötzlich klar, dass wir mit unseren Kindern nicht genug über 
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
+  <p class="w3-justify">Ich schrieb das Manuskript an zwei Nachmittagen. Um mein grob skizziertes Storyboard umzusetzen arbeitete ich mit Meruert Zharekesheva zusammen, die ich seit dem gemeinsamen Architekturstudium mit ihrem Talent für figurliches Zeichnen kenne. Sie fertigte mit Gouache Farben die Bilder von Hand für das Projekt.</p>
 
 <div class="w3-content" style="max-width:300px"> <img src="img/filzhaus.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
 	 
@@ -178,11 +179,6 @@
 	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-khaki">Kinderlesungen</button></a>
 	</div>
 
-	<!-- Fördervermerk -->	 
-	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
-	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
-	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
-
 	 
 	 
 
@@ -194,6 +190,13 @@
 	 </p>
 	 <br>  
   <br>  
+
+	 
+	<!-- Fördervermerk -->	 
+	 <h3 class="w3-opacity w3-left-align">Fördervermerk</h3>
+	 <p class="w3-justify"> Das Projekt wurde vom <a href="https://frau.sia.ch/" target="_blank" rel="noopener">Netzwerk Frau und SIA</a> finanziell unterstützt. </p>
+	 <p class="w3-justify"> Ein besonderer Dank geht an Yvan Delemontey, Pia Grünwald, Jessica Wilcox, Max Tirassa, Margherita Dagnino - sie haben das Lektorat für die verschiedenen Sprachen übernommen. Grosses Danke auch an Hannah van Hove für die flämische und Márti Szagalyi für die ungarische Übersetzung.</p>
+
 
  <img src="img/langensteinen.jpg" alt="Korinna Weber" class="w3-center" style="width:100%">
 
@@ -267,6 +270,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
