--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -163,12 +163,19 @@
   <p class="w3-justify">Als ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss wurde mir plötzlich klar, dass wir mit unseren Kindern nicht genug über 
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
+
+	 
+<!-- Details -->	
+   <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
   <p class="w3-justify">Ich schrieb das Manuskript an zwei Nachmittagen. Um mein grob skizziertes Storyboard umzusetzen arbeitete ich mit Meruert Zharekesheva zusammen, die ich seit dem gemeinsamen Architekturstudium mit ihrem Talent für figurliches Zeichnen kenne. Sie fertigte mit Gouache Farben die Bilder von Hand für das Projekt.</p>
+	 <p class="w3-justify">Für mein Kinderbuch war ich auf der Suche nach einer Schrift, die den Charakter des Gebäudes von 1938 widerspiegelt und zugleich individuell sowie lizenzfrei ist, um ins kleine Budget zu passen. Bei der Recherche zu dem besagten Nachbarhaus stieß ich auf eine historische Aufnahme von 1940, auf der neben dem Eingang ein Relief mit dem Hausnamen "Langenrain" zu sehen ist, das heute nicht mehr existiert. Inspiriert von diesem Relief schrieb ich das Alphabet von Hand, scannte es und digitalisierte es mit einer Software – so entstand die Schrift „Langenrain“ für das Kinderbuch.</p>
+ <p class="w3-justify">Die Geschichte erforderte einen architektonischen Entwurf für die Aufstockung des sanierten Hauses. Auf Grundlage der Originalpläne des Vorbildhauses hat Meruert ein ein digitales 3D‑Modell erstellt, das den Gestaltungs‑ und Illustrationsprozess unterstützte. Konkretes Vorbild das von <a href="https://www.freisaarinen.ch/Projekte/pr_index.html" target="_blank" rel="noopener">Frei + Saarinen Architects</a> in Zürich entworfene Haus in der Agnesstrasse.
+	 </p>
 
 <div class="w3-content" style="max-width:300px"> <img src="img/filzhaus.jpg" alt="filzhaus" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
 	 
 <!-- Kinderbuch Lesung -->	
-<h3 class="w3-opacity w3-left-align">Veranstaltung für Kinder</h3>
+<h3 class="w3-opacity w3-left-align">Die Geschichte mit dem Filzhaus erleben</h3>
 	<p class="w3-justify">Aus dem Kinderbuch habe ich ein Veranstaltungskonzept speziell an Kinder (ab 4 Jahren, jünger willkommen) gerichtet entwickelt. Auf einem Stuhl nimmt ein besonderer Gast Platz: 
 		das blaue Filzhaus! Warum ist es traurig, frage ich die Kinder. Dann lese ich aus meinem Buch vor und anschliessend entdecken alle zusammen spielerisch - meist in zwei Gruppen - den Häuserkreislauf. Zum Schluss dürfen Materialien aus dem Haus gezogen werden. Und etwas Kleines zur Erinnerung gibt es auch...</p>
 	 
@@ -179,15 +186,6 @@
 	<a href="angebote.html#Kinderlesungen"><button class="w3-button w3-khaki">Kinderlesungen</button></a>
 	</div>
 
-	 
-	 
-
-
-<!-- Details -->	
-   <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
- <p class="w3-justify">Für mein Kinderbuch war ich auf der Suche nach einer Schrift, die den Charakter des Gebäudes von 1938 widerspiegelt und zugleich individuell sowie lizenzfrei ist, um ins kleine Budget zu passen. Bei der Recherche zu dem besagten Nachbarhaus stieß ich auf eine historische Aufnahme von 1940, auf der neben dem Eingang ein Relief mit dem Hausnamen "Langenrain" zu sehen ist, das heute nicht mehr existiert. Inspiriert von diesem Relief schrieb ich das Alphabet von Hand, scannte es und digitalisierte es mit einer Software – so entstand die Schrift „Langenrain“ für das Kinderbuch.</p>
- <p class="w3-justify">Die Geschichte erforderte einen architektonischen Entwurf für die Aufstockung des sanierten Hauses. Auf Grundlage der Originalpläne des Vorbildhauses hat Meruert ein ein digitales 3D‑Modell erstellt, das den Gestaltungs‑ und Illustrationsprozess unterstützte. Konkretes Vorbild das von <a href="https://www.freisaarinen.ch/Projekte/pr_index.html" target="_blank" rel="noopener">Frei + Saarinen Architects</a> in Zürich entworfene Haus in der Agnesstrasse.
-	 </p>
 	 <br>  
   <br>  
 
@@ -270,6 +268,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
