--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -130,7 +130,7 @@
  <div class="w3-container w3-content w3-center w3-padding-24" style="max-width:800px" id="buch">
  
 <!-- Buchbeschrieb -->	
-	<p class="w3-justify">Dieses Buch erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen näher gebracht.
+	<p class="w3-justify">Das Kinderbuch "Mein NEUES altes Haus" erzählt die Geschichte der kleinen Lilian, deren hellblaues Haus abgerissen werden soll. Doch dann fragt sich Lilian, warum wir unsere Häuser eigentlich nicht zuerst reparieren und sie schreibt dem Besitzer einen Brief. Hier wird das Thema Nachhaltigkeit und Umbau in Architektur liebevoll den ganz Kleinen näher gebracht.
 </p>
 	<p class="w3-justify">Mit Texten und Typografie von Korinna Zinovia Weber und handgemalten Illustrationen von Meruert Zharekesheva.
 </p>
@@ -268,6 +268,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
