--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -140,6 +140,7 @@
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
+	<img class="mySlides" src="img/lesung.jpg" style="width:100%">
    <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
    <img class="mySlides" src="img/merukori.jpg" style="width:100%">
    <img class="mySlides" src="img/echteshaus.jpg" style="width:100%">
@@ -164,6 +165,8 @@
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
   </p>
 
+	 <div class="w3-content" style="max-width:300px"> <img src="img/gemaltebilder.jpg" alt="gemaltebilder" class="w3-circle w3-image" style="width:60%; aspect-ratio:1/1; object-fit:cover;"> </div>
+	 
 	 
 <!-- Details -->	
    <h3 class="w3-opacity w3-left-align">Mit Liebe zu Details...</h3>
@@ -268,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
