--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -140,7 +140,7 @@
 <!-- Slideshow -->	 
   <div class="w3-content w3-display-container">
    <img class="mySlides" src="img/kinderbuch.jpg" style="width:100%">
-	<img class="mySlides" src="img/lesung.jpg" style="width:100%">
+	<img class="mySlides" src="img/lesung.JPG" style="width:100%">
    <img class="mySlides" src="img/Tisch-Bücher.jpg" style="width:100%">
    <img class="mySlides" src="img/merukori.jpg" style="width:100%">
    <img class="mySlides" src="img/echteshaus.jpg" style="width:100%">
@@ -271,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
