--- a/b_alteshaus.html
+++ b/b_alteshaus.html
@@ -159,7 +159,7 @@
 	
 	<p class="w3-justify">Irgendwo in der Schweiz stand ein vierstöckiges Wohnhaus mit Mansardendach, das 1938 erbaut wurde – eine für seine Zeit typische lokale Architektur. Im Jahr 2023 wurde bekannt gegeben, dass es abgerissen und durch ein neues Gebäude ersetzt werden sollte mit ausschließlich winzige Zimmer (9 m²) für Studierende. 
     Die Entscheidung des Eigentümers überraschte die Bewohnerinnen und Bewohner. Einige waren vor kurzem erst eingezogen, darunter eine junge Familie mit einem Neugeborenen. Während sie gegen die Wohnungsknappheit demonstrierten, schaffte es ihr Fall in die lokalen Zeitungen. 
-    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung die Einheimischen aus ihren Vierteln verdrängt.
+    Dieser Abriss ist nur einer von vielen in der Schweiz, aber auch in anderen Ländern, wo die Gentrifizierung Menschen aus ihren Vierteln verdrängt.
  </p>
   <p class="w3-justify">Als ich sah, wie meine Tochter reagierte, als ich ihr erzählte, dass das Haus neben unserem abgerissen werden soll und ihre Freundin deshalb wegziehen muss wurde mir plötzlich klar, dass wir mit unseren Kindern nicht genug über 
     unsere (sich ständig verändernde) gebaute Umwelt sprechen und darüber, wie wir damit umgehen (sollten). Das inspirierte mich dazu, ein Kinderbuch zu diesem Thema zu schreiben.
@@ -271,6 +271,7 @@ function showDivs(n) {
 
 </body>
 </html>
+
 
 
 
